--- a/css/pages/offers.css
+++ b/css/pages/offers.css
@@ -50,3 +50,9 @@ button.hov2{
     background: rgb(206, 200, 200);
     border: none;
 }
+
+@media(min-width:991px){
+    footer{
+        padding: 50px;
+    }
+}
