--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ header .fixedNav{
     color:white;
     font-family: Arial, Helvetica, sans-serif ;
     /* font-size: 90px; */
+    font-family: 50px;
     
 }
 
